# reasondb

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  QUERY_LANGUAGE_PLAN.md  README.md  TABLES_PLAN.md  docker-compose.yml  package.json
.github/workflows/: bump-version.yml  ci.yml  docker-publish.yml  release-desktop.yml  release.yml
apps/reasondb-client/: package-lock.json  package.json  vite.config.ts
crates/reasondb-cli/: Cargo.toml
crates/reasondb-core/: Cargo.toml
crates/reasondb-core/src/: cache.rs  engine.rs  error.rs  lib.rs  query_decomposer.rs  shard.rs  text_index.rs  trace.rs
crates/reasondb-core/src/backup/: export.rs
crates/reasondb-core/src/cluster/: mod.rs
crates/reasondb-core/src/llm/: config.rs  dynamic.rs  mock.rs  mod.rs  openai.rs  provider.rs
crates/reasondb-core/src/model/: document.rs  filter.rs  mod.rs  node.rs  table.rs  tests.rs
crates/reasondb-core/src/ratelimit/: limiter.rs  store.rs
crates/reasondb-core/src/rql/: ast.rs  executor.rs  lexer.rs  mod.rs  parser.rs  tests.rs
crates/reasondb-core/src/rql/executor/: filter.rs  mod.rs  reason.rs  types.rs
crates/reasondb-core/src/store/: config.rs  documents.rs  indexes.rs  jobs.rs  mod.rs  nodes.rs  queries.rs  rate_limits.rs  relations.rs  tables.rs  tests.rs  traces.rs
crates/reasondb-ingest/: Cargo.toml
crates/reasondb-ingest/src/: chunker.rs  error.rs  extractor.rs  lib.rs  pdf.rs  pipeline.rs  summarizer.rs  tree_builder.rs
crates/reasondb-server/: Cargo.toml
crates/reasondb-server/src/: auth.rs  error.rs  jobs.rs  lib.rs  main.rs  metrics.rs  openapi.rs  ratelimit.rs  replication.rs  state.rs
crates/reasondb-server/src/routes/: config.rs  documents.rs  ingest.rs  jobs.rs  mod.rs  query.rs  search.rs  tables.rs
docs/: concepts.mdx  custom.css  docs.json  index.mdx  package-lock.json  quickstart.mdx  theme.json
docs/advanced/: architecture.mdx
docs/api-reference/: introduction.mdx  openapi.json
docs/guides/: backup.mdx  configuration.mdx  contributing.mdx  ingestion.mdx  monitoring.mdx  relationships.mdx  rql.mdx  search.mdx  tables.mdx
docs/tutorials/: document-relationships.mdx  index.mdx  knowledge-base.mdx  legal-search.mdx  research-papers.mdx  rql-basics.mdx
monitoring/: docker-compose.yml  grafana-dashboard.json  prometheus.yml
scripts/: seed-docs.sh  test-queries.sh  update-homebrew.sh
tutorials/: package.json
tutorials/01-rql-basics/: package.json
tutorials/02-legal-search/: package.json
tutorials/03-research-papers/: package.json
tutorials/04-knowledge-base/: package.json
tutorials/05-pdf-financials/: package.json
tutorials/06-insurance/: package.json  tsconfig.tsbuildinfo
tutorials/scripts/: extract-insurance-pdfs.py  fetch-all.ts
(+140 files in other folders)
